optimisation du dessin avec drag